--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@
 .*.swp
 *.pdf
 *.myfile
+sender1
+receiver1
+sender2
+receiver2
+sender3
+receiver3
+sender4
+receiver4
+sender5
+receiver5
+sender6
+receiver6
+sender_physical_test
+receiver_physical_test
